sintatico.output
Terminais sem uso na gramática

    OPTER


Gramática

    0 $accept: prog $end

    1 $@1: %empty

    2 prog: $@1 cmds

    3 cmds: %empty

    4 $@2: %empty

    5 cmds: cmd $@2 cmdstail

    6 cmdstail: %empty

    7 $@3: %empty

    8 cmdstail: cmd $@3 cmdstail

    9 cmd: IF '(' exp ')' cmd
   10    | IF '(' exp ')' cmd ELSE cmd
   11    | WHILE '(' exp ')' cmd
   12    | FORALL '(' exp ')' cmd

   13 @4: %empty

   14 cmd: FOR @4 '(' forargs ')' cmd
   15    | exp ';'
   16    | RETURN exp ';'

   17 $@5: %empty

   18 cmd: $@5 '{' cmds '}'
   19    | ';'

   20 @6: %empty

   21 cmd: TYPE ID @6 idlist ';'

   22 @7: %empty

   23 cmd: TYPE ID '(' @7 declr_fntail
   24    | IF '(' error ')' cmd
   25    | IF '(' error ')' cmd ELSE cmd
   26    | WHILE '(' error ')' cmd
   27    | FORALL '(' error ')' cmd
   28    | RETURN error ';'

   29 @8: %empty

   30 $@9: %empty

   31 cmd: TYPE idlist @8 ';' $@9 error

   32 @10: %empty

   33 @11: %empty

   34 $@12: %empty

   35 cmd: TYPE @10 '(' parlist ')' @11 '{' cmds '}' $@12 error

   36 $@13: %empty

   37 declr_fntail: parlist ')' '{' $@13 cmds '}'

   38 $@14: %empty

   39 declr_fntail: error '{' $@14 cmds '}'

   40 $@15: %empty

   41 $@16: %empty

   42 declr_fntail: parlist ')' $@15 error $@16 cmds '}'

   43 parlist: %empty
   44        | TYPE ID partail
   45        | ID partail

   46 partail: %empty
   47        | ',' TYPE ID partail
   48        | TYPE ID partail

   49 $@17: %empty

   50 forargs: TYPE ID '=' exp $@17 fordeclrlist fortail fortail

   51 $@18: %empty

   52 forargs: TYPE ID $@18 idlist fortail fortail
   53        | exp fortail fortail
   54        | fortail fortail

   55 fordeclrlist: %empty
   56             | ',' ID '=' exp fordeclrlist

   57 fortail: ';' exp
   58        | ';'

   59 idlist: %empty

   60 $@19: %empty

   61 idlist: ',' ID $@19 idlist

   62 exp: INT
   63    | FLOAT
   64    | EMPTY
   65    | STRING
   66    | CHAR
   67    | ID OPPOS
   68    | '*' exp
   69    | '+' exp
   70    | '-' exp
   71    | '!' exp
   72    | '~' exp
   73    | '&' exp
   74    | OPUNI exp
   75    | exp '*' exp
   76    | exp '/' exp
   77    | exp '%' exp
   78    | exp '+' exp
   79    | exp '-' exp
   80    | exp IN exp
   81    | exp OPBIN3 exp
   82    | exp OPBIN4 exp
   83    | exp OPBIN5 exp
   84    | exp OPBIN6 exp
   85    | exp OPBIN7 exp
   86    | exp OPBIN8 exp
   87    | exp OPBIN9 exp
   88    | exp '?' exp ':' exp
   89    | ID OPASSIGN exp

   90 @20: %empty

   91 exp: ID @20 fntail
   92    | ID
   93    | '(' exp ')'
   94    | exp '*' error
   95    | exp '/' error
   96    | exp '%' error
   97    | exp '+' error
   98    | exp '-' error
   99    | exp OPBIN3 error
  100    | exp OPBIN4 error
  101    | exp OPBIN5 error
  102    | exp OPBIN6 error
  103    | exp OPBIN7 error
  104    | exp OPBIN8 error
  105    | exp OPBIN9 error
  106    | exp OPBIN10 error
  107    | ID OPASSIGN error

  108 fntail: '(' arglist ')'
  109       | '(' arglist error ')'

  110 arglist: %empty
  111        | exp argtail

  112 argtail: %empty
  113        | ',' exp argtail


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 71
    '%' (37) 77 96
    '&' (38) 73
    '(' (40) 9 10 11 12 14 23 24 25 26 27 35 93 108 109
    ')' (41) 9 10 11 12 14 24 25 26 27 35 37 42 93 108 109
    '*' (42) 68 75 94
    '+' (43) 69 78 97
    ',' (44) 47 56 61 113
    '-' (45) 70 79 98
    '/' (47) 76 95
    ':' (58) 88
    ';' (59) 15 16 19 21 28 31 57 58
    '=' (61) 50 56
    '?' (63) 88
    '{' (123) 18 35 37 39
    '}' (125) 18 35 37 39 42
    '~' (126) 72
    error (256) 24 25 26 27 28 31 35 39 42 94 95 96 97 98 99 100 101 102 103 104 105 106 107 109
    ID <node> (258) 21 23 44 45 47 48 50 52 56 61 67 89 91 92 107
    TYPE <node> (259) 21 23 31 35 44 47 48 50 52
    OPPOS <node> (260) 67
    OPUNI <node> (261) 74
    OPTER <node> (262)
    IN <node> (263) 80
    OPBIN3 <node> (264) 81 99
    OPBIN4 <node> (265) 82 100
    OPBIN5 <node> (266) 83 101
    OPBIN6 <node> (267) 84 102
    OPBIN7 <node> (268) 85 103
    OPBIN8 <node> (269) 86 104
    OPBIN9 <node> (270) 87 105
    OPBIN10 <node> (271) 106
    OPASSIGN <node> (272) 89 107
    STRING <node> (273) 65
    CHAR <node> (274) 66
    INT <node> (275) 62
    FLOAT <node> (276) 63
    IF <name> (277) 9 10 24 25
    WHILE <name> (278) 11 26
    FORALL <name> (279) 12 27
    FOR <name> (280) 14
    ELSE <name> (281) 10 25
    RETURN <name> (282) 16 28
    EMPTY <name> (283) 64


Não terminais com as regras onde eles aparecem

    $accept (46)
        à esquerda: 0
    prog (47)
        à esquerda: 2
        à direita: 0
    $@1 (48)
        à esquerda: 1
        à direita: 2
    cmds (49)
        à esquerda: 3 5
        à direita: 2 18 35 37 39 42
    $@2 (50)
        à esquerda: 4
        à direita: 5
    cmdstail (51)
        à esquerda: 6 8
        à direita: 5 8
    $@3 (52)
        à esquerda: 7
        à direita: 8
    cmd <node> (53)
        à esquerda: 9 10 11 12 14 15 16 18 19 21 23 24 25 26 27 28 31 35
        à direita: 5 8 9 10 11 12 14 24 25 26 27
    @4 (54)
        à esquerda: 13
        à direita: 14
    $@5 (55)
        à esquerda: 17
        à direita: 18
    @6 (56)
        à esquerda: 20
        à direita: 21
    @7 (57)
        à esquerda: 22
        à direita: 23
    @8 (58)
        à esquerda: 29
        à direita: 31
    $@9 (59)
        à esquerda: 30
        à direita: 31
    @10 (60)
        à esquerda: 32
        à direita: 35
    @11 (61)
        à esquerda: 33
        à direita: 35
    $@12 (62)
        à esquerda: 34
        à direita: 35
    declr_fntail (63)
        à esquerda: 37 39 42
        à direita: 23
    $@13 (64)
        à esquerda: 36
        à direita: 37
    $@14 (65)
        à esquerda: 38
        à direita: 39
    $@15 (66)
        à esquerda: 40
        à direita: 42
    $@16 (67)
        à esquerda: 41
        à direita: 42
    parlist <node> (68)
        à esquerda: 43 44 45
        à direita: 35 37 42
    partail <node> (69)
        à esquerda: 46 47 48
        à direita: 44 45 47 48
    forargs <node> (70)
        à esquerda: 50 52 53 54
        à direita: 14
    $@17 (71)
        à esquerda: 49
        à direita: 50
    $@18 (72)
        à esquerda: 51
        à direita: 52
    fordeclrlist (73)
        à esquerda: 55 56
        à direita: 50 56
    fortail <node> (74)
        à esquerda: 57 58
        à direita: 50 52 53 54
    idlist (75)
        à esquerda: 59 61
        à direita: 21 31 52 61
    $@19 (76)
        à esquerda: 60
        à direita: 61
    exp <node> (77)
        à esquerda: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
        à direita: 9 10 11 12 15 16 50 53 56 57 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 93 94 95 96 97 98 99 100 101 102 103 104 105 106 111 113
    @20 (78)
        à esquerda: 90
        à direita: 91
    fntail (79)
        à esquerda: 108 109
        à direita: 91
    arglist <node> (80)
        à esquerda: 110 111
        à direita: 108 109
    argtail <node> (81)
        à esquerda: 112 113
        à direita: 111 113


Estado 0

    0 $accept: • prog $end

    $end    reduzir usando a regra 1 ($@1)
    ID      reduzir usando a regra 1 ($@1)
    TYPE    reduzir usando a regra 1 ($@1)
    OPUNI   reduzir usando a regra 1 ($@1)
    STRING  reduzir usando a regra 1 ($@1)
    CHAR    reduzir usando a regra 1 ($@1)
    INT     reduzir usando a regra 1 ($@1)
    FLOAT   reduzir usando a regra 1 ($@1)
    IF      reduzir usando a regra 1 ($@1)
    WHILE   reduzir usando a regra 1 ($@1)
    FORALL  reduzir usando a regra 1 ($@1)
    FOR     reduzir usando a regra 1 ($@1)
    RETURN  reduzir usando a regra 1 ($@1)
    EMPTY   reduzir usando a regra 1 ($@1)
    '!'     reduzir usando a regra 1 ($@1)
    '~'     reduzir usando a regra 1 ($@1)
    '&'     reduzir usando a regra 1 ($@1)
    '*'     reduzir usando a regra 1 ($@1)
    '+'     reduzir usando a regra 1 ($@1)
    '-'     reduzir usando a regra 1 ($@1)
    '('     reduzir usando a regra 1 ($@1)
    ';'     reduzir usando a regra 1 ($@1)
    '{'     reduzir usando a regra 1 ($@1)

    prog  ir ao estado 1
    $@1   ir ao estado 2


Estado 1

    0 $accept: prog • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 prog: $@1 • cmds

    ID      deslocar, e ir ao estado 4
    TYPE    deslocar, e ir ao estado 5
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    IF      deslocar, e ir ao estado 11
    WHILE   deslocar, e ir ao estado 12
    FORALL  deslocar, e ir ao estado 13
    FOR     deslocar, e ir ao estado 14
    RETURN  deslocar, e ir ao estado 15
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23
    ';'     deslocar, e ir ao estado 24

    $end  reduzir usando a regra 3 (cmds)
    '{'   reduzir usando a regra 17 ($@5)

    cmds  ir ao estado 25
    cmd   ir ao estado 26
    $@5   ir ao estado 27
    exp   ir ao estado 28


Estado 3

    0 $accept: prog $end •

    $padrão  aceitar


Estado 4

   67 exp: ID • OPPOS
   89    | ID • OPASSIGN exp
   91    | ID • @20 fntail
   92    | ID •
  107    | ID • OPASSIGN error

    OPPOS     deslocar, e ir ao estado 29
    OPASSIGN  deslocar, e ir ao estado 30

    IN       reduzir usando a regra 92 (exp)
    OPBIN3   reduzir usando a regra 92 (exp)
    OPBIN4   reduzir usando a regra 92 (exp)
    OPBIN5   reduzir usando a regra 92 (exp)
    OPBIN6   reduzir usando a regra 92 (exp)
    OPBIN7   reduzir usando a regra 92 (exp)
    OPBIN8   reduzir usando a regra 92 (exp)
    OPBIN9   reduzir usando a regra 92 (exp)
    OPBIN10  reduzir usando a regra 92 (exp)
    '*'      reduzir usando a regra 92 (exp)
    '/'      reduzir usando a regra 92 (exp)
    '%'      reduzir usando a regra 92 (exp)
    '+'      reduzir usando a regra 92 (exp)
    '-'      reduzir usando a regra 92 (exp)
    '?'      reduzir usando a regra 92 (exp)
    '('      reduzir usando a regra 90 (@20)
    ';'      reduzir usando a regra 92 (exp)

    @20  ir ao estado 31


Estado 5

   21 cmd: TYPE • ID @6 idlist ';'
   23    | TYPE • ID '(' @7 declr_fntail
   31    | TYPE • idlist @8 ';' $@9 error
   35    | TYPE • @10 '(' parlist ')' @11 '{' cmds '}' $@12 error

    ID   deslocar, e ir ao estado 32
    ','  deslocar, e ir ao estado 33

    '('  reduzir usando a regra 32 (@10)
    ';'  reduzir usando a regra 59 (idlist)

    @10     ir ao estado 34
    idlist  ir ao estado 35


Estado 6

   74 exp: OPUNI • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 36


Estado 7

   65 exp: STRING •

    IN       reduzir usando a regra 65 (exp)
    OPBIN3   reduzir usando a regra 65 (exp)
    OPBIN4   reduzir usando a regra 65 (exp)
    OPBIN5   reduzir usando a regra 65 (exp)
    OPBIN6   reduzir usando a regra 65 (exp)
    OPBIN7   reduzir usando a regra 65 (exp)
    OPBIN8   reduzir usando a regra 65 (exp)
    OPBIN9   reduzir usando a regra 65 (exp)
    OPBIN10  reduzir usando a regra 65 (exp)
    '*'      reduzir usando a regra 65 (exp)
    '/'      reduzir usando a regra 65 (exp)
    '%'      reduzir usando a regra 65 (exp)
    '+'      reduzir usando a regra 65 (exp)
    '-'      reduzir usando a regra 65 (exp)
    '?'      reduzir usando a regra 65 (exp)
    ';'      reduzir usando a regra 65 (exp)


Estado 8

   66 exp: CHAR •

    IN       reduzir usando a regra 66 (exp)
    OPBIN3   reduzir usando a regra 66 (exp)
    OPBIN4   reduzir usando a regra 66 (exp)
    OPBIN5   reduzir usando a regra 66 (exp)
    OPBIN6   reduzir usando a regra 66 (exp)
    OPBIN7   reduzir usando a regra 66 (exp)
    OPBIN8   reduzir usando a regra 66 (exp)
    OPBIN9   reduzir usando a regra 66 (exp)
    OPBIN10  reduzir usando a regra 66 (exp)
    '*'      reduzir usando a regra 66 (exp)
    '/'      reduzir usando a regra 66 (exp)
    '%'      reduzir usando a regra 66 (exp)
    '+'      reduzir usando a regra 66 (exp)
    '-'      reduzir usando a regra 66 (exp)
    '?'      reduzir usando a regra 66 (exp)
    ';'      reduzir usando a regra 66 (exp)


Estado 9

   62 exp: INT •

    IN       reduzir usando a regra 62 (exp)
    OPBIN3   reduzir usando a regra 62 (exp)
    OPBIN4   reduzir usando a regra 62 (exp)
    OPBIN5   reduzir usando a regra 62 (exp)
    OPBIN6   reduzir usando a regra 62 (exp)
    OPBIN7   reduzir usando a regra 62 (exp)
    OPBIN8   reduzir usando a regra 62 (exp)
    OPBIN9   reduzir usando a regra 62 (exp)
    OPBIN10  reduzir usando a regra 62 (exp)
    '*'      reduzir usando a regra 62 (exp)
    '/'      reduzir usando a regra 62 (exp)
    '%'      reduzir usando a regra 62 (exp)
    '+'      reduzir usando a regra 62 (exp)
    '-'      reduzir usando a regra 62 (exp)
    '?'      reduzir usando a regra 62 (exp)
    ';'      reduzir usando a regra 62 (exp)


Estado 10

   63 exp: FLOAT •

    IN       reduzir usando a regra 63 (exp)
    OPBIN3   reduzir usando a regra 63 (exp)
    OPBIN4   reduzir usando a regra 63 (exp)
    OPBIN5   reduzir usando a regra 63 (exp)
    OPBIN6   reduzir usando a regra 63 (exp)
    OPBIN7   reduzir usando a regra 63 (exp)
    OPBIN8   reduzir usando a regra 63 (exp)
    OPBIN9   reduzir usando a regra 63 (exp)
    OPBIN10  reduzir usando a regra 63 (exp)
    '*'      reduzir usando a regra 63 (exp)
    '/'      reduzir usando a regra 63 (exp)
    '%'      reduzir usando a regra 63 (exp)
    '+'      reduzir usando a regra 63 (exp)
    '-'      reduzir usando a regra 63 (exp)
    '?'      reduzir usando a regra 63 (exp)
    ';'      reduzir usando a regra 63 (exp)


Estado 11

    9 cmd: IF • '(' exp ')' cmd
   10    | IF • '(' exp ')' cmd ELSE cmd
   24    | IF • '(' error ')' cmd
   25    | IF • '(' error ')' cmd ELSE cmd

    '('  deslocar, e ir ao estado 37


Estado 12

   11 cmd: WHILE • '(' exp ')' cmd
   26    | WHILE • '(' error ')' cmd

    '('  deslocar, e ir ao estado 38


Estado 13

   12 cmd: FORALL • '(' exp ')' cmd
   27    | FORALL • '(' error ')' cmd

    '('  deslocar, e ir ao estado 39


Estado 14

   14 cmd: FOR • @4 '(' forargs ')' cmd

    '('  reduzir usando a regra 13 (@4)

    @4  ir ao estado 40


Estado 15

   16 cmd: RETURN • exp ';'
   28    | RETURN • error ';'

    error   deslocar, e ir ao estado 41
    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 42


Estado 16

   64 exp: EMPTY •

    IN       reduzir usando a regra 64 (exp)
    OPBIN3   reduzir usando a regra 64 (exp)
    OPBIN4   reduzir usando a regra 64 (exp)
    OPBIN5   reduzir usando a regra 64 (exp)
    OPBIN6   reduzir usando a regra 64 (exp)
    OPBIN7   reduzir usando a regra 64 (exp)
    OPBIN8   reduzir usando a regra 64 (exp)
    OPBIN9   reduzir usando a regra 64 (exp)
    OPBIN10  reduzir usando a regra 64 (exp)
    '*'      reduzir usando a regra 64 (exp)
    '/'      reduzir usando a regra 64 (exp)
    '%'      reduzir usando a regra 64 (exp)
    '+'      reduzir usando a regra 64 (exp)
    '-'      reduzir usando a regra 64 (exp)
    '?'      reduzir usando a regra 64 (exp)
    ';'      reduzir usando a regra 64 (exp)


Estado 17

   71 exp: '!' • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 43


Estado 18

   72 exp: '~' • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 44


Estado 19

   73 exp: '&' • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 45


Estado 20

   68 exp: '*' • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 46


Estado 21

   69 exp: '+' • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 47


Estado 22

   70 exp: '-' • exp

    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 48


Estado 23

   93 exp: '(' • exp ')'

    ID      deslocar, e ir ao estado 219
    OPUNI   deslocar, e ir ao estado 220
    STRING  deslocar, e ir ao estado 221
    CHAR    deslocar, e ir ao estado 222
    INT     deslocar, e ir ao estado 223
    FLOAT   deslocar, e ir ao estado 224
    EMPTY   deslocar, e ir ao estado 225
    '!'     deslocar, e ir ao estado 226
    '~'     deslocar, e ir ao estado 227
    '&'     deslocar, e ir ao estado 228
    '*'     deslocar, e ir ao estado 229
    '+'     deslocar, e ir ao estado 230
    '-'     deslocar, e ir ao estado 231
    '('     deslocar, e ir ao estado 232

    exp  ir ao estado 49


Estado 24

   19 cmd: ';' •

    $end    reduzir usando a regra 19 (cmd)
    ID      reduzir usando a regra 19 (cmd)
    TYPE    reduzir usando a regra 19 (cmd)
    OPUNI   reduzir usando a regra 19 (cmd)
    STRING  reduzir usando a regra 19 (cmd)
    CHAR    reduzir usando a regra 19 (cmd)
    INT     reduzir usando a regra 19 (cmd)
    FLOAT   reduzir usando a regra 19 (cmd)
    IF      reduzir usando a regra 19 (cmd)
    WHILE   reduzir usando a regra 19 (cmd)
    FORALL  reduzir usando a regra 19 (cmd)
    FOR     reduzir usando a regra 19 (cmd)
    RETURN  reduzir usando a regra 19 (cmd)
    EMPTY   reduzir usando a regra 19 (cmd)
    '!'     reduzir usando a regra 19 (cmd)
    '~'     reduzir usando a regra 19 (cmd)
    '&'     reduzir usando a regra 19 (cmd)
    '*'     reduzir usando a regra 19 (cmd)
    '+'     reduzir usando a regra 19 (cmd)
    '-'     reduzir usando a regra 19 (cmd)
    '('     reduzir usando a regra 19 (cmd)
    ';'     reduzir usando a regra 19 (cmd)
    '{'     reduzir usando a regra 19 (cmd)


Estado 25

    2 prog: $@1 cmds •

    $end  reduzir usando a regra 2 (prog)


Estado 26

    5 cmds: cmd • $@2 cmdstail

    $end    reduzir usando a regra 4 ($@2)
    ID      reduzir usando a regra 4 ($@2)
    TYPE    reduzir usando a regra 4 ($@2)
    OPUNI   reduzir usando a regra 4 ($@2)
    STRING  reduzir usando a regra 4 ($@2)
    CHAR    reduzir usando a regra 4 ($@2)
    INT     reduzir usando a regra 4 ($@2)
    FLOAT   reduzir usando a regra 4 ($@2)
    IF      reduzir usando a regra 4 ($@2)
    WHILE   reduzir usando a regra 4 ($@2)
    FORALL  reduzir usando a regra 4 ($@2)
    FOR     reduzir usando a regra 4 ($@2)
    RETURN  reduzir usando a regra 4 ($@2)
    EMPTY   reduzir usando a regra 4 ($@2)
    '!'     reduzir usando a regra 4 ($@2)
    '~'     reduzir usando a regra 4 ($@2)
    '&'     reduzir usando a regra 4 ($@2)
    '*'     reduzir usando a regra 4 ($@2)
    '+'     reduzir usando a regra 4 ($@2)
    '-'     reduzir usando a regra 4 ($@2)
    '('     reduzir usando a regra 4 ($@2)
    ';'     reduzir usando a regra 4 ($@2)
    '{'     reduzir usando a regra 4 ($@2)

    $@2  ir ao estado 50


Estado 27

   18 cmd: $@5 • '{' cmds '}'

    '{'  deslocar, e ir ao estado 51


Estado 28

   15 cmd: exp • ';'
   75 exp: exp • '*' exp
   76    | exp • '/' exp
   77    | exp • '%' exp
   78    | exp • '+' exp
   79    | exp • '-' exp
   80    | exp • IN exp
   81    | exp • OPBIN3 exp
   82    | exp • OPBIN4 exp
   83    | exp • OPBIN5 exp
   84    | exp • OPBIN6 exp
   85    | exp • OPBIN7 exp
   86    | exp • OPBIN8 exp
   87    | exp • OPBIN9 exp
   88    | exp • '?' exp ':' exp
   94    | exp • '*' error
   95    | exp • '/' error
   96    | exp • '%' error
   97    | exp • '+' error
   98    | exp • '-' error
   99    | exp • OPBIN3 error
  100    | exp • OPBIN4 error
  101    | exp • OPBIN5 error
  102    | exp • OPBIN6 error
  103    | exp • OPBIN7 error
  104    | exp • OPBIN8 error
  105    | exp • OPBIN9 error
  106    | exp • OPBIN10 error

    IN       deslocar, e ir ao estado 52
    OPBIN3   deslocar, e ir ao estado 53
    OPBIN4   deslocar, e ir ao estado 54
    OPBIN5   deslocar, e ir ao estado 55
    OPBIN6   deslocar, e ir ao estado 56
    OPBIN7   deslocar, e ir ao estado 57
    OPBIN8   deslocar, e ir ao estado 58
    OPBIN9   deslocar, e ir ao estado 59
    OPBIN10  deslocar, e ir ao estado 60
    '*'      deslocar, e ir ao estado 61
    '/'      deslocar, e ir ao estado 62
    '%'      deslocar, e ir ao estado 63
    '+'      deslocar, e ir ao estado 64
    '-'      deslocar, e ir ao estado 65
    '?'      deslocar, e ir ao estado 66
    ';'      deslocar, e ir ao estado 67


Estado 29

   67 exp: ID OPPOS •

    IN       reduzir usando a regra 67 (exp)
    OPBIN3   reduzir usando a regra 67 (exp)
    OPBIN4   reduzir usando a regra 67 (exp)
    OPBIN5   reduzir usando a regra 67 (exp)
    OPBIN6   reduzir usando a regra 67 (exp)
    OPBIN7   reduzir usando a regra 67 (exp)
    OPBIN8   reduzir usando a regra 67 (exp)
    OPBIN9   reduzir usando a regra 67 (exp)
    OPBIN10  reduzir usando a regra 67 (exp)
    '*'      reduzir usando a regra 67 (exp)
    '/'      reduzir usando a regra 67 (exp)
    '%'      reduzir usando a regra 67 (exp)
    '+'      reduzir usando a regra 67 (exp)
    '-'      reduzir usando a regra 67 (exp)
    '?'      reduzir usando a regra 67 (exp)
    ';'      reduzir usando a regra 67 (exp)


Estado 30

   89 exp: ID OPASSIGN • exp
  107    | ID OPASSIGN • error

    error   deslocar, e ir ao estado 68
    ID      deslocar, e ir ao estado 4
    OPUNI   deslocar, e ir ao estado 6
    STRING  deslocar, e ir ao estado 7
    CHAR    deslocar, e ir ao estado 8
    INT     deslocar, e ir ao estado 9
    FLOAT   deslocar, e ir ao estado 10
    EMPTY   deslocar, e ir ao estado 16
    '!'     deslocar, e ir ao estado 17
    '~'     deslocar, e ir ao estado 18
    '&'     deslocar, e ir ao estado 19
    '*'     deslocar, e ir ao estado 20
    '+'     deslocar, e ir ao estado 21
    '-'     deslocar, e ir ao estado 22
    '('     deslocar, e ir ao estado 23

    exp  ir ao estado 69


Estado 31

   91 exp: ID @20 • fntail

    '('  deslocar, e ir ao estado 70

    fntail  ir ao estado 71


Estado 32

   21 cmd: TYPE ID • @6 idlist ';'
   23    | TYPE ID • '(' @7 declr_fntail

    '('  deslocar, e ir ao estado 72

    ';'  reduzir usando a regra 20 (@6)
    ','  reduzir usando a regra 20 (@6)

    @6  ir ao estado 73


Estado 33

   61 idlist: ',' • ID $@19 idlist

    ID  deslocar, e ir ao estado 74


Estado 34

   35 cmd: TYPE @10 • '(' parlist ')' @11 '{' cmds '}' $@12 error

    '('  deslocar, e ir ao estado 75


Estado 35

   31 cmd: TYPE idlist • @8 ';' $@9 error

    ';'  reduzir usando a regra 29 (@8)

    @8  ir ao estado 76


Estado 36

   74 exp: OPUNI exp •
   75    | exp • '*' exp
   76    | exp • '/' exp
   77    | exp • '%' exp
   78    | exp • '+' exp
   79    | exp • '-' exp
   80    | exp • IN exp
   81    | exp • OPBIN3 exp
   82    | exp • OPBIN4 exp
   83    | exp • OPBIN5 exp
   84    | exp • OPBIN6 exp
   85    | exp • OPBIN7 exp
   86    | exp • OPBIN8 exp
   87    | exp • OPBIN9 exp
   88    | exp • '?' exp ':' exp
   94    | exp • '*' error
   95    | exp • '/' error
   96    | exp • '%' error
   97    | exp • '+' error
   98    | exp • '-' error
   99    | exp • OPBIN3 error
  100    | exp • OPBIN4 error
  101    | exp • OPBIN5 error
  102    | exp • OPBIN6 error
  103    | exp • OPBIN7 error
  104    | exp • OPBIN8 error
  105    | exp • OPBIN9 error
  106    | exp • OPBIN10 error
